# python-project-common

./: .editorconfig  README.rst  changelog.rst  copier.yaml  pyproject.toml  sources-test.tar.xz
.auxiliary/configuration/: AGENTS.md  conventions.md  copier-answers--agents.yaml  copier-answers.yaml  hatch-constraints.pip  mcp-servers.json  pre-commit.yaml  vulturefood.py
.auxiliary/notes/: agent-ideas.md  cascades.md  cc-hook-ideas.md  claude-gha-enhancements.md  cli-repository.md  command-ideas.md  commands-audit.md  commit-approval.md  conventions-update.md  docs-reduction-proposal.md  documentation-improvements.md  foundations-plan.md  injections-vs-examples.md  mcp-server-research.md  separate-docs-llms.md  todo.md
.auxiliary/publications/: website.tar.xz
.auxiliary/scripts/: claude-ds  prepare-agents
.github/workflows/: claude.yaml  core--initializer.yaml  releaser.yaml  tester.yaml  validate-template.yaml  xrepo--claude.yaml  xrepo--documenter.yaml  xrepo--packager.yaml  xrepo--reporter.yaml  xrepo--tester.yaml
data/style-validation/: before.py  before.rs
data/templates/: coverage.svg.jinja  website.html.jinja
documentation/: api.rst  changelog.rst  conf.py  contribution.rst  devapi.rst  index.rst  prd.rst  template-changelog.rst
documentation/architecture/: filesystem.rst  index.rst  summary.rst
executables/: update-website.py
sources/emcd_projects_rust/: Cargo.toml  build.rs
sources/emcd_projects_rust/src/: lib.rs
template/: README.rst.jinja  copier.yaml  pyproject.toml.jinja  {% if enable_executables %}pyinstaller.spec{% endif %}.jinja
(+247 files in other folders)
